objects/vlocity_ins__ItemImplementation__c.object
<CustomObject>
    <description>Registration of custom Apex or Java code that can be used to execute a fulfillment task (an orchestration item).</description>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Implementation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ThorImplementation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Thor Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item Implementation</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Implementation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Implementations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>